k0s/manifests/grafana/kustomize/base/resources/deployment-grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: victoria-metrics
    app.kubernetes.io/version: 13.1.0
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana
      app.kubernetes.io/instance: victoria-metrics
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grafana
        app.kubernetes.io/instance: victoria-metrics
        app.kubernetes.io/version: 13.1.0
      annotations:
        kubectl.kubernetes.io/default-container: grafana
    spec:
      serviceAccountName: grafana
      automountServiceAccountToken: true
      shareProcessNamespace: false
      securityContext:
        fsGroup: 472
        runAsGroup: 472
        runAsNonRoot: true
        runAsUser: 472
      enableServiceLinks: true
      containers:
      - name: grafana-sc-dashboard
        image: quay.io/kiwigrid/k8s-sidecar:2.8.1
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - name: sc-dashboard-volume
          mountPath: /var/lib/grafana/dashboards
      - name: grafana-sc-datasources
        image: quay.io/kiwigrid/k8s-sidecar:2.8.1
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - name: sc-datasources-volume
          mountPath: /etc/grafana/provisioning/datasources
      - name: grafana
        image: docker.io/grafana/grafana:13.1.0
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - name: config
          mountPath: /etc/grafana/grafana.ini
          subPath: grafana.ini
        - name: storage
          mountPath: /var/lib/grafana
        - name: search
          mountPath: /var/lib/grafana-search
        - name: sc-dashboard-volume
          mountPath: /var/lib/grafana/dashboards
        - name: sc-dashboard-provider
          mountPath: /etc/grafana/provisioning/dashboards/sc-dashboardproviders.yaml
          subPath: provider.yaml
        - name: sc-datasources-volume
          mountPath: /etc/grafana/provisioning/datasources
        ports:
        - name: grafana
          containerPort: 3000
          protocol: TCP
        - name: gossip-tcp
          containerPort: 9094
          protocol: TCP
        - name: gossip-udp
          containerPort: 9094
          protocol: UDP
        - name: profiling
          containerPort: 6060
          protocol: TCP
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /api/health
            port: grafana
          initialDelaySeconds: 60
          timeoutSeconds: 30
        readinessProbe:
          httpGet:
            path: /api/health
            port: grafana
      volumes:
      - name: config
        configMap:
          name: grafana
      - name: storage
        emptyDir: {}
      - name: search
        emptyDir: {}
      - name: sc-dashboard-volume
        emptyDir: {}
      - name: sc-dashboard-provider
        configMap:
          name: grafana-config-dashboards
      - name: sc-datasources-volume
        emptyDir: {}
